--- a/votarEtapa1.html
+++ b/votarEtapa1.html
@@ -3,7 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
@@ -18,12 +20,13 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/node-uuid/1.4.7/uuid.min.js"></script>
 
+    <script src="./jquery/JQuery-3.5.1.js"></script>
 
     <link rel="stylesheet" href="css/styles.css">
-    <title>Registrar usuarios</title>
+    <title>Votar</title>
 </head>
 
-<body class="fondo">
+<body>
     <div class="container">
         <div class="row mb-3">
             <div class="col">
@@ -31,52 +34,50 @@
                     <li><a href="registrarDatos.html" class="nav-link">Inicio</a></li>
                     <li><a href="obtenerEstudiantes.html" class="nav-link">Listar Estudiantes</a></li>
                     <li><a href="registrarPlanilla.html" class="nav-link">Registrar Planilla</a></li>
-                    <li><a href="obtenerPlanillas.html" class="nav-link">Listar Planillas</a></li>
-                    <li><a href="votarEtapa1.html" class="nav-link">Votar</a></li>
                 </ul>
             </div>
         </div>
 
-   
 
         <div class="row">
-            <div class="col-7">
+            <div class="col-5">
                 <h1>Registrar Datos personales</h1>
-                <div id="respuestaPositiva" class="alert-success mb-3 text-center"
-                    style="font-size: 15px; font-weight: bolder;"></div>
+
                 <div id="respuestaNegativa" class="alert-danger"></div>
                 <form id="formulario">
-                    <label for="nombre" class="form-label">Ingresa los nombres</label>
-                    <input type="text" name="nombres" class="form-control form-control-sm" required>
-
-                    <label for="apellidos" class="form-label">Ingresa los apellidos</label>
-                    <input type="text" name="apellidos" class="form-control form-control-sm" required>
-
-                    <label for="email" class="form-label">Ingresa el email del usuario</label>
-                    <input type="email" name="email" class="form-control form-control-sm" required>
-
-                    <label for="password" class="form-label">Ingresa la contraseña</label>
-                    <input type="password" name="password" class="form-control form-control-sm" id="" required>
-
-                    <label for="perfil" class="form-label">Selecciona un rol</label>
-                    <select name="perfil" class="form-select form-select-lg mb-3" aria-label=".form-select-lg example"
-                        required>
-                        <option value="Administrador" class="form-control form-control-sm">Administrador</option>
-                        <option value="Estudiante" class="form-control form-control-sm">Estudiante</option>
-                    </select>
-
+                    <label for="cta" class="form-label">Ingresa el número de cuenta</label>
+                    <input type="text" name="cta" class="form-control form-control-sm" required>
 
                     <br>
-                    <input type="submit" value="Registrar" class="btn btn-primary">
+                    <input type="submit" value="Buscar" class="btn btn-primary">
 
                 </form>
+            </div>
+
+            <div class="col-7">
+                <div class="alert alert-primary mt-3 role='alert">
+                    ¡Copia y pega tú <strong>Número de cuenta</strong>!
+                </div>
+                <div class="table-responsive">
+                    <table class="table table-striped 
+                            table-hover table-sm">
+                        <thead>
+                            <tr class="table-dark">
+                                <th>CTA</th>
+                                <th>NOMBRES</th>
+                                <th>CARRERA</th>
+                            </tr>
+                        </thead>
+                        <tbody id="table-body">
+                        </tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
 
-    <script src="./js/registrarUsuario.js"></script>
-
-
+    <script src="./js/votarPaso1.js"></script>
+    <script src="./js/obtenerEstudiantesNoVoto.js"></script>
 </body>
 
 </html>
