--- a/registrarPlanilla.html
+++ b/registrarPlanilla.html
@@ -28,11 +28,11 @@
             <div class="col">
                 <h1>Registrar Planilla</h1>
                 <ul class="nav border-bottom border-body">
-                    <li><a href="registrarDatos.html" class="nav-link">Inicio</a></li>
+                    <li><a href="index.html" class="nav-link">Inicio</a></li>
+                    <li><a href="registrarDatos.html" class="nav-link">Registrar Datos</a></li>
                     <li><a href="obtenerEstudiantes.html" class="nav-link">Listar Estudiantes</a></li>
                     <li><a href="registrarPlanilla.html" class="nav-link">Registrar Planilla</a></li>
                     <li><a href="obtenerPlanillas.html" class="nav-link">Listar Planillas</a></li>
-                    <li><a href="votarEtapa1.html" class="nav-link">Votar</a></li>
                 </ul>
             </div>
         </div>
